# sot_ur

./: CMakeLists.txt  controller_plugins.xml  manifest.xml  ur_sot_controller.yaml
include/sot_ur/: ur_controller_plugin.h  ur_device.h  ur_sot_controller.h
launch/: display.launch
python/: controller_test.py
src/: sot_ur.cpp  sot_ur.hh  ur_controller_plugin.cpp  ur_device.cpp  ur_sot_controller.cpp
src/dynamic_graph/sot/ur/: prologue.py  robot.py  ur_tasks.py
